crates/sgf-core/tests/snapshots/ops_remove_planet/remove_a_colony_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Removed colony #18 from planet #517, with 4 pop groups and 2 armies
details stale: [174]
inverse: Restored colony #18 on planet #517

  System: 174
  Planet: 517
  Country: 11
  Colony: 18
  PopGroup: 60 62 64 205
  PopJob: 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 244 245 797 798 799 800 801 802 803 804
  District: 71 72 73 74
  Zone: 81 82 83 84 86
  Building: 156 157 158 159 160 161 162 163 165 166 167
  Army: 312 315
  ConstructionQueue: 76 77
@@ -41434,8 +40877,4 @@
 		sector=10
 		index=37
-		colonies=
-		{
-			18 
-		}
 		inhibitor_owners=
 		{
@@ -106204,8 +105411,6 @@
 		517=
 		{
-			colony=18
 			planet_class="pc_tropical"
 			planet_size=16
-			colonize_date=			"2200.01.01"
 			carrier_binary_flags=1
 			build_queue=76
@@ -106244,7 +105449,5 @@
 			orbit=120
 			last_bombardment=			"0.01.01"
-			owner=11
 			original_owner=11
-			controller=11
 			planet_orbitals=
 			{
@@ -567984,9 +567187,9 @@
 		owned_armies=
 		{
-			20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274 275 276 277 278 279 280 281 282 283 284 285 286 287 288 289 290 291 292 293 294 295 296 297 298 299 300 301 302 303 312 315 316 319 320 323 324 327 16777469 16777533 16777520 16777385 16777377 16777296 16777525 356 358 361 363 365 368 370 372 374 376 378 
+			20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274 275 276 277 278 279 280 281 282 283 284 285 286 287 288 289 290 291 292 293 294 295 296 297 298 299 300 301 302 303 316 319 320 323 324 327 16777469 16777533 16777520 16777385 16777377 16777296 16777525 356 358 361 363 365 368 370 372 374 376 378 
 		}
 		owned_planets=
 		{
-			16 17 18 19 20 21 
+			16 17 19 20 21 
 		}
 		restricted_systems=
@@ -567996,9 +567199,9 @@
 		controlled_colonies=
 		{
-			16 17 18 19 20 21 
+			16 17 19 20 21 
 		}
 		controlled_planets=
 		{
-			449 450 445 460 474 484 481 491 489 504 501 517 511 528 524 539 538 559 558 2492 3174 512 476 451 448 506 503 520 499 497 495 492 525 526 527 490 563 469 465 463 533 557 552 546 545 3182 2496 2512 2507 2500 2503 2502 454 467 487 485 3181 531 
+			449 450 445 460 474 484 481 491 489 504 501 511 528 524 539 538 559 558 2492 3174 512 476 451 448 506 503 520 499 497 495 492 525 526 527 490 563 469 465 463 533 557 552 546 545 3182 2496 2512 2507 2500 2503 2502 454 467 487 485 3181 531 
 		}
 		ship_design_collection=
@@ -620720,5 +619923,5 @@
 			76=
 			{
-				owner=11
+				owner=4294967295
 				location=
 				{
@@ -620731,5 +619934,5 @@
 			77=
 			{
-				owner=11
+				owner=4294967295
 				location=
 				{
