crates/sgf-core/tests/snapshots/ops_remove_planet/remove_a_colony_at_the_system_starbase_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Removed colony #11 from planet #318, with 3 pop groups and 13 armies
details stale: [400]
inverse: Restored colony #11 on planet #318

  System: 400
  Planet: 318
  Country: 16777226
  Colony: 11
  PopGroup: 25 26 27
  PopJob: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 47 48 49 50 51 52 53 54 55
  District: 43 44 45 46
  Zone: 39 41 42 43 44
  Building: 63 64 65 66 67 68 69 70 71 72 73 77 78 79
  Army: 141 142 143 144 145 146 147 148 149 150 151 152 153
  ConstructionQueue: 40 41
@@ -57309,5 +56797,5 @@
 		colonies=
 		{
-			10 11 
+			10 
 		}
 		inhibitor_owners=
@@ -95148,8 +94430,6 @@
 		318=
 		{
-			colony=11
 			planet_class="pc_gaia"
 			planet_size=25
-			colonize_date=			"2200.01.01"
 			carrier_binary_flags=1
 			build_queue=40
@@ -95167,11 +94447,8 @@
 			orbit=100
 			last_bombardment=			"0.01.01"
-			owner=16777226
 			original_owner=16777226
-			controller=16777226
 			planet_orbitals=
 			{
 			}
-			orbital_defence=46
 			bombardment_damage=0
 			flags=
@@ -520822,9 +520099,9 @@
 		owned_armies=
 		{
-			0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 158 159 160 162 163 164 166 167 168 16777542 16777538 16777534 16777530 16777523 16777268 16777529 16777466 16777381 16777373 16777526 16777470 357 360 362 364 367 369 371 373 375 377 383 384 385 386 387 388 
+			0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 154 155 156 158 159 160 162 163 164 166 167 168 16777542 16777538 16777534 16777530 16777523 16777268 16777529 16777466 16777381 16777373 16777526 16777470 357 360 362 364 367 369 371 373 375 377 383 384 385 386 387 388 
 		}
 		owned_planets=
 		{
-			10 11 12 13 14 15 
+			10 12 13 14 15 
 		}
 		restricted_systems=
@@ -520834,9 +520111,9 @@
 		controlled_colonies=
 		{
-			10 11 12 13 14 15 
+			10 12 13 14 15 
 		}
 		controlled_planets=
 		{
-			316 318 313 330 340 385 381 402 400 415 414 427 426 351 347 343 419 420 421 441 432 394 331 393 390 389 384 413 412 407 401 314 325 323 410 406 418 333 
+			316 313 330 340 385 381 402 400 415 414 427 426 351 347 343 419 420 421 441 432 394 331 393 390 389 384 413 412 407 401 314 325 323 410 406 418 333 
 		}
 		ship_design_collection=
@@ -620304,5 +619581,5 @@
 			40=
 			{
-				owner=16777226
+				owner=4294967295
 				location=
 				{
@@ -620319,5 +619596,5 @@
 					67108892 
 				}
-				owner=16777226
+				owner=4294967295
 				location=
 				{
