crates/sgf-core/tests/snapshots/ops_remove_planet/remove_a_colony_under_construction_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Removed colony #12 from planet #385, with 2 pop groups and 4 armies
details stale: [513]
inverse: Restored colony #12 on planet #385

  System: 513
  Planet: 385
  Country: 16777226
  Colony: 12
  PopGroup: 29 31
  PopJob: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 82 83
  District: 47 48 49 50
  Zone: 45 46 47 48 50
  Building: 80 81 82 83 84 85 86 87 89 90 91
  Army: 154 155 156 16777542
  ConstructionQueue: 46 47
@@ -65397,8 +64957,4 @@
 		sector=9
 		index=10
-		colonies=
-		{
-			12 
-		}
 		inhibitor_owners=
 		{
@@ -98685,8 +98054,6 @@
 		385=
 		{
-			colony=12
 			planet_class="pc_arid"
 			planet_size=16
-			colonize_date=			"2200.01.01"
 			carrier_binary_flags=1
 			build_queue=46
@@ -98725,7 +98092,5 @@
 			orbit=120
 			last_bombardment=			"0.01.01"
-			owner=16777226
 			original_owner=16777226
-			controller=16777226
 			moons=
 			{
@@ -520822,9 +520187,9 @@
 		owned_armies=
 		{
-			0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 158 159 160 162 163 164 166 167 168 16777542 16777538 16777534 16777530 16777523 16777268 16777529 16777466 16777381 16777373 16777526 16777470 357 360 362 364 367 369 371 373 375 377 383 384 385 386 387 388 
+			0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 158 159 160 162 163 164 166 167 168 16777538 16777534 16777530 16777523 16777268 16777529 16777466 16777381 16777373 16777526 16777470 357 360 362 364 367 369 371 373 375 377 383 384 385 386 387 388 
 		}
 		owned_planets=
 		{
-			10 11 12 13 14 15 
+			10 11 13 14 15 
 		}
 		restricted_systems=
@@ -520834,9 +520199,9 @@
 		controlled_colonies=
 		{
-			10 11 12 13 14 15 
+			10 11 13 14 15 
 		}
 		controlled_planets=
 		{
-			316 318 313 330 340 385 381 402 400 415 414 427 426 351 347 343 419 420 421 441 432 394 331 393 390 389 384 413 412 407 401 314 325 323 410 406 418 333 
+			316 318 313 330 340 381 402 400 415 414 427 426 351 347 343 419 420 421 441 432 394 331 393 390 389 384 413 412 407 401 314 325 323 410 406 418 333 
 		}
 		ship_design_collection=
@@ -620374,5 +619739,5 @@
 			46=
 			{
-				owner=16777226
+				owner=4294967295
 				location=
 				{
@@ -620389,5 +619754,5 @@
 					67108890 
 				}
-				owner=16777226
+				owner=4294967295
 				location=
 				{
